--- a/style.css
+++ b/style.css
@@ -1,180 +1,322 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
-    --higlight-color: #EA5455;
-    --text-color: #30475e;
-    --background-color: #f7f7f7;
-    --black-color: #000000;
-    --footer-color: #bfbfbf;
-    --sky-blue: #84a9ac;
-
-
+  --higlight-color: #ea5455;
+  --text-color: #30475e;
+  --background-color: #f7f7f7;
+  --black-color: #000000;
+  --footer-color: #bfbfbf;
+  --sky-blue: #84a9ac;
+  --carousel-height: 350px;
+  --carousel-radius: 0.5em;
+  --carousel-nav-btn-dim: 3em;
+  --carousel-page-nav-btn-dim: 0.5em;
+  --carousel-caption-padding: 2em;
+  --carousel-caption-color: #fff;
+  --carousel-caption-bg: linear-gradient(
+    to bottom,
+    transparent,
+    hsl(0 0 0 / 65%) 80%
+  );
+  --carousel-inner-spacing: 2em;
+  --carousel-prev-next-btn-bg: #fff;
+  --carousel-prev-next-btn-color: #333;
+  --carousel-pagination-margin: 1em;
+  --carousel-pagination-gap: 0.75em;
+  --carousel-pagination-btn-bg: #aaa;
+  --carousel-pagination-btn-active-bg: #333;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: var(--background-color);
-    
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: var(--background-color);
+}
+
+img,
+video,
+audio {
+  max-width: 100%;
 }
 
 header {
-    margin: 20px 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: var(--text-color);
-    padding: 20px;
-    border-radius: 20px;
-    text-align: left;
+  margin: 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--text-color);
+  padding: 20px;
+  border-radius: 20px;
+  text-align: left;
 }
 
 header .logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 header img {
-    max-width: 50px;
+  max-width: 50px;
 }
 
 header h1 {
-    margin: 0;
-    color: var(--higlight-color);
+  margin: 0;
+  color: var(--higlight-color);
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 10px;
+  display: inline;
+  margin-right: 10px;
 }
 
 nav ul li a {
-    color: var(--text-color);
-    text-decoration: none;
+  color: var(--text-color);
+  text-decoration: none;
 }
 
 nav ul li a:hover {
-    
-    color: var(--higlight-color);
+  color: var(--higlight-color);
 }
 
 /* Form Styles -  */
 .formsection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 section h1 {
-    text-align: center;
-    font-size: 3em; /* Adjust based on preference */
-    font-weight: bold;
-    margin-bottom: 20px;
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 section p {
-    text-align: center;
-    margin-bottom: 30px;
-    line-height: 1.5em;
+  text-align: center;
+  margin-bottom: 30px;
+  line-height: 1.5em;
 }
 
 form {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 form label {
-    margin-bottom: 10px;
-    width: 100%;
-    text-align: left;
+  margin-bottom: 10px;
+  width: 100%;
+  text-align: left;
 }
 
-form input, form textarea {
-    margin-bottom: 20px;
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
+form input,
+form textarea {
+  margin-bottom: 20px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 form button {
-    padding: 10px 20px;
-    font-size: 1em;
-    color: var(--background-color);
-    background-color: var(--higlight-color);
-    border: none;
-    cursor: pointer;
-    transition: background 0.3s;
+  padding: 10px 20px;
+  font-size: 1em;
+  color: var(--background-color);
+  background-color: var(--higlight-color);
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 form button:hover {
-    background-color: #30475e;
+  background-color: #30475e;
 }
-
 
 /* Hero Section  */
 
 .flex-container {
-    justify-content: left;
-    align-items: center;
+  justify-content: left;
+  align-items: center;
 }
 
 .hero {
+  padding: 50px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin: 20px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero h1,
+.hero h2,
+.hero p {
+  color: var(--text-color);
+  text-align: left;
+  padding: 20px;
+}
+
+.hero .hero-text {
+}
+
+.hero img {
+  max-width: 800px;
+  height: auto;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin: 20px 20px;
+}
+
+footer {
+  background-color: #bfbfbf;
+  color: #000000;
+  text-align: center;
+  padding: 20px;
+}
+
+/* Carosel */
+
+.carouselwrapper {
+  margin: 100px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+.carousel-inner {
+  overflow: hidden;
+  position: relative;
+  min-height: var(--carousel-height);
+  border-radius: var(--carousel-radius);
+}
+
+.carousel-title {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+  text-align: center;
+  color: var(--higlight-color);
+}
+
+.carousel-title + .carousel-description {
+  color: #888;
+  margin-top: 0;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: transform 0.5s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+.slide-content {
+  position: relative;
+  z-index: 5000;
+  height: 100%;
+}
+
+.slide-caption {
+  width: 100%;
+  position: absolute;
+  padding: var(--carousel-caption-padding);
+  left: 0;
+  bottom: 0;
+  color: var(--carousel-caption-color);
+  background-image: var(--carousel-caption-bg);
+}
+
+.slide-caption a {
+  color: currentColor;
+}
+
+.slide-caption h3,
+.slide-caption p {
+  margin: 0;
+}
+
+.slide-caption p {
+  font-size: 1em;
+  font-weight: bold;
+  opacity: 0.6;
+}
+
+.slide img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.carousel-btn {
+  width: var(--carousel-nav-btn-dim);
+  height: var(--carousel-nav-btn-dim);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  color: var(--carousel-prev-next-btn-color);
+  background-color: var(--carousel-prev-next-btn-bg);
+}
+
+.carousel-btn--prev-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.1s ease-in-out;
+}
+
+.carousel-btn--prev-next:hover {
+  transform: translateY(-50%) scale(1.2);
+}
+
+.carousel-btn--prev {
+  left: var(--carousel-inner-spacing);
+}
+
+.carousel-btn--next {
+  right: var(--carousel-inner-spacing);
+}
+/* Media Queries */
+@media screen and (min-width: 992px) {
+  form,
+  .formp {
+    width: 50%;
+    margin: 20px auto;
+  }
+  body {
+    padding: 0px 100px;
+  }
+  .hero {
     padding: 50px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin: 20px 0px;
-}
-
-
-
-.hero h1, .hero p {
-    color: var(--text-color);
-    text-align: left;
-}
-
-
-
-
-.hero img{
-    width: 300px;
-    height: auto;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    margin: 20px 20px;
-}
-
-
-footer {
-    background-color: #bfbfbf;
-    color: #000000;
-    text-align: center;
-    padding: 20px;
-}
-
-/* Rest of your CSS */
-@media screen and (min-width: 992px) {
-    form, .formp {
-        width: 50%; /* Make form only occupy 50% (or 2/4) of container on larger screens */
-        margin: 20px auto; /* Center form in its container */
-    }
-    body {
-        padding: 0px 100px;
-    }
-    .hero {
-        display: flex;
-    }
-    .hero-text {
-        flex: 2;
-    }
+    display: flex;
+    flex-direction: row;
+  }
+  .hero-text {
+    flex: 2;
+  }
 }
