--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 :root {
@@ -33,6 +34,8 @@
 
 body {
   margin: 0;
+  margin-top: 80px;
+
   font-family: Arial, sans-serif;
   background-color: var(--background-color);
 }
@@ -44,16 +47,23 @@ audio {
 }
 
 header {
-  margin: 20px 0px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: linear-gradient(to top, transparent, var(--background-color) 40%);
+  z-index: 1000;
+  margin: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   color: var(--text-color);
   padding: 20px;
-  border-radius: 20px;
   text-align: left;
 }
 
+header a {
+  margin-right: 50px;
+}
 header .logo {
   display: flex;
   align-items: center;
@@ -135,18 +145,31 @@ form textarea {
   box-sizing: border-box;
 }
 
-form button {
+button {
   padding: 10px 20px;
   font-size: 1em;
   color: var(--background-color);
   background-color: var(--higlight-color);
   border: none;
+  border-radius: 10px;
   cursor: pointer;
   transition: background 0.3s;
 }
 
 form button:hover {
   background-color: #30475e;
+}
+
+.success-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  text-align: center; /* Center text */
+  padding: 20px; /* Add some padding for better spacing */
+}
+
+.success-container button {
+  margin-top: 50px; /* Add some space between the message and the button */
 }
 
 /* Hero Section  */
