--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header {
   justify-content: space-evenly;
   align-items: center;
   color: var(--text-color);
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
   text-align: left;
 }
 
