--- a/style.css
+++ b/style.css
@@ -151,21 +151,6 @@ header h1 {
   color: var(--higlight-color);
 }
 
-/* nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
-}
-
-nav ul li a {
-  color: var(--text-color);
-  text-decoration: none;
-} */
-
 nav ul li a:hover {
   color: var(--higlight-color);
 }
@@ -184,7 +169,7 @@ nav ul li a:hover {
 
 section h1 {
   text-align: center;
-  font-size: 3em;
+  font-size: 2.3em;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -229,7 +214,7 @@ button {
   transition: background 0.3s;
 }
 
-form button:hover {
+button:hover {
   background-color: #30475e;
 }
 
@@ -256,7 +241,7 @@ form button:hover {
   padding: 50px;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin: 20px 0px;
+  margin: 20px 10px;
   display: flex;
   flex-direction: column;
 }
@@ -455,6 +440,9 @@ footer {
 
 /* Media Queries */
 @media screen and (min-width: 769px) {
+  section h1 {
+    font-size: 3em;
+  }
   .mobile-nav {
     display: none;
   }
@@ -476,6 +464,10 @@ footer {
 }
 
 @media screen and (min-width: 992px) {
+  .formsection {
+    margin: 50px 0px;
+    padding: 100px 0px;
+  }
   form,
   .formp {
     width: 50%;
