--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ footer {
   align-items: center;
   justify-content: center;
   width: 100%;
+  min-height: fit-content;
   padding: 20px;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
@@ -343,7 +344,7 @@ footer {
 .slide-content {
   position: relative;
   z-index: 5000;
-  height: 100%;
+  min-height: fit-content;
 }
 
 .slide-caption {
@@ -354,6 +355,7 @@ footer {
   bottom: 0;
   color: var(--carousel-caption-color);
   background-image: var(--carousel-caption-bg);
+  cursor: pointer;
 }
 
 .slide-caption a {
@@ -372,8 +374,10 @@ footer {
 }
 
 .slide img {
+  object-fit: contain;
+  min-height: fit-content;
   width: 100%;
-  object-fit: cover;
+  padding: 10px 0px;
 }
 
 .carousel-btn {
@@ -441,7 +445,8 @@ footer {
 
 .service-card img {
   max-width: 100%;
-  height: auto;
+  min-height: fit-content;
+
   border-radius: 5px;
   margin-bottom: 10px;
 }
