change layout to nav, add js to header margin

--- a/style.css
+++ b/style.css
@@ -50,25 +50,41 @@ audio {
 .mobile-nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
+  align-items: flex-start
   padding: 10px;
+  width: 100%;
 }
 
-#ham-img {
-  display: block;
+#toggle-menu {
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
-#close-img {
+#menu-img {
+  display: inline;
+}
+#close-img{
   display: none;
+  width: 40px;
 }
+#ham-img,
+#close-img {
+  display: inline;
+  margin-left: auto;
+}
+
+#ham-img{ 
+  width: 25px;
+}
+
 .mobile-nav label {
-  display: block;
   cursor: pointer;
 }
 
 .hamburger-menu img {
-  width: 30px;
+  width: 40px;
   height: auto;
 }
 
@@ -93,8 +109,13 @@ audio {
 
 .mobile-nav nav ul li a {
   text-decoration: none;
-  color: #333;
+  color: var(--higlight-color);
   font-weight: bold;
+}
+
+.mobile-nav nav ul li {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 /* Desktop Nav */
@@ -160,7 +181,7 @@ header h1 {
 }
 
 nav ul li a:hover {
-  color: var(--higlight-color);
+  color: var(--text-color);
 }
 
 .headerBackground {
@@ -307,7 +328,7 @@ footer {
   border-radius: 20px 20px 0px 0px;
 }
 
-/* Carosel */
+/* Carousel */
 
 .carouselwrapper {
   margin: 100px 0px;
