--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ nav ul li a:hover {
 }
 
 .headerOrange {
-  color: var(--higlight-color);
+  color: var(--higlight-color) !important
 }
 
 /* Form Styles -  */
@@ -559,3 +559,4 @@ footer {
     align-self: center;
   }
 }
+
