--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ nav ul li a:hover {
 
 section h1 {
   text-align: center;
+  color: var(--text-color);
   font-size: 2.3em;
   font-weight: bold;
   margin-bottom: 20px;
@@ -217,6 +218,7 @@ section p {
   text-align: center;
   margin-bottom: 30px;
   line-height: 1.5em;
+  color: var(--text-color);
 }
 
 form {
@@ -226,12 +228,14 @@ form {
   align-items: center;
   justify-content: center;
   width: 100%;
+  color: var(--text-color);
 }
 
 form label {
   margin-bottom: 10px;
   width: 100%;
   text-align: left;
+  color: var(--text-color);
 }
 
 form input,
@@ -240,6 +244,7 @@ form textarea {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
+  color: var(--text-color);
 }
 
 button {
@@ -319,7 +324,7 @@ button:hover {
 
 footer {
   background-color: #bfbfbf;
-  color: #000000;
+  color: var(--text-color);
   text-align: center;
   padding: 20px;
   border-radius: 20px 20px 0px 0px;
@@ -354,9 +359,9 @@ footer {
   color: var(--higlight-color);
 }
 
-.carousel-title + .carousel-description {
-  color: #888;
+.carousel-description {
   margin-top: 0;
+  color: var(--text-color);
 }
 
 .slide {
@@ -396,6 +401,7 @@ footer {
   font-size: 1em;
   font-weight: bold;
   opacity: 1;
+  color: var(--background-color);
 }
 
 .slide img {
